# BigDataInterview

./: README.md  pyproject.toml  requirements.txt
subject_1/: README.md  crawlers.py  extractors.py  main.py  tools.py  utils.py
subject_2/: KEYPO功能手冊文件.md  README.md  main.py  utils.py
